Edited demo table display

--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -1,3 +1,51 @@
-<p>
-  listcampaign works!
-</p>
+<div fxLayout="row" fxLayoutWrap="wrap">
+    <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+        <mat-card>
+            <mat-card-content> 
+                <mat-card-title>Campaign List</mat-card-title>
+                <div class="table-rasponsive">
+                    <mat-table #table [dataSource]="dataSource" matSort style="max-height: 500px; overflow:auto;">
+
+                        <!-- Position Column -->
+                        <ng-container matColumnDef="position">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> No. </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="name">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Weight Column -->
+                        <ng-container matColumnDef="weight">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Weight </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="symbol">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+                        </ng-container>
+
+			<ng-container matColumnDef="actions">
+    			  <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+    			  <mat-cell *matCellDef="let row">
+         		    <button mat-raised-button color="primary">Edit</button> 
+    			  </mat-cell>
+			</ng-container> 
+
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                      </mat-table>
+                  <mat-paginator #paginator
+                                 [pageSize]="10"
+                                 [pageSizeOptions]="[5, 10, 20]">
+                  </mat-paginator>
+                </div>    
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
