--- a/panel/src/app/campaign/addcampaign/addcampaign.component.html
+++ b/panel/src/app/campaign/addcampaign/addcampaign.component.html
@@ -1,3 +1,101 @@
-<p>
-  addcampaign works!
-</p>
+<!-- ============================================================== -->
+<!-- Card Grid-->
+<!-- ============================================================== -->
+<div fxLayout="row" fxLayoutWrap="wrap">
+    <div fxFlex.gt-sm="100" fxFlex="100">
+        <mat-card>
+            <mat-card-content>
+                <mat-card-title>Form Basic Layouts</mat-card-title>
+                <!-- ============================================================== -->
+                <!-- column -->
+                <!-- ============================================================== -->
+                <form class="basic-form">
+                <div fxLayout="row" fxLayoutWrap="wrap">
+                    <!-- column -->
+                    <div fxFlex.gt-md="100" fxFlex="100">
+                      <mat-form-field>
+                        <input matInput placeholder="Some text value">
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field>
+                        <input matInput placeholder="EmailId" type="email">
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field>
+                        <input matInput placeholder="Password" type="password">
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field [floatLabel]="options.value.floatLabel">
+                        <mat-label>Both a label and a placeholder</mat-label>
+                        <input matInput placeholder="Simple placeholder">
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field hintLabel="Max 10 characters">
+                        <input matInput #input maxlength="10" placeholder="Enter some input">
+                        <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field>
+                        <mat-select placeholder="Select">
+                          <mat-option value="option">Option</mat-option>
+                          <mat-option value="option">Option2</mat-option>
+                          <mat-option value="option">Option3</mat-option>    
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100" class="m-b-20">
+                      <input class="form-control b-b" placeholder="file" type="file">
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field
+                          [hideRequiredMarker]="options.value.hideRequired"
+                          [floatLabel]="options.value.floatLabel">
+                        <mat-select required>
+                          <mat-option>-- None --</mat-option>
+                          <mat-option value="option">Option</mat-option>
+                        </mat-select>
+                        <mat-placeholder><mat-icon>favorite</mat-icon> <b> Fancy</b> <i> placeholder</i></mat-placeholder>
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100" class="m-t-10 m-b-10">
+                        <mat-checkbox color="primary"  class="m-r-10">Checkbox</mat-checkbox> 
+                        <mat-checkbox  color="warn" class="m-r-10">Checkbox</mat-checkbox> 
+                        <mat-checkbox  color="accent">Checkbox</mat-checkbox>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100" class="m-t-20 m-b-20">
+                      <mat-radio-group>
+                        <mat-radio-button color="primary" value="auto" class="m-r-10">Auto</mat-radio-button>
+                        <mat-radio-button color="warn" value="always" class="m-r-10">Always</mat-radio-button>
+                        <mat-radio-button color="accent" value="never">Never</mat-radio-button>
+                      </mat-radio-group>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <mat-form-field>
+                        <textarea matInput placeholder="Textarea"></textarea>
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="100" fxFlex="100">
+                      <button mat-raised-button color="primary">Submit</button>
+                    </div> 
+                </div>
+                </form>      
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
