--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -1,15 +1,20 @@
+<app-breadcrumbs [heading]="'Campaign List'" [icon]="'fa-table'"></app-breadcrumbs>
 <div fxLayout="row" fxLayoutWrap="wrap">
     <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
         <mat-card>
             <mat-card-content> 
-                <mat-card-title>Campaign List</mat-card-title>
+		<div class="example-header">
+    		    <mat-form-field>
+      			<input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    		   </mat-form-field>
+  		</div>
                 <div class="table-rasponsive">
-                    <mat-table #table [dataSource]="dataSource" matSort style="max-height: 500px; overflow:auto;">
+                    <mat-table #table [dataSource]="dataSource" matSort>
 
                         <!-- Position Column -->
-                        <ng-container matColumnDef="position">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> No. </mat-header-cell>
-                          <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+                        <ng-container matColumnDef="id">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> S. No. </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
                         </ng-container>
 
                         <!-- Name Column -->
@@ -19,21 +24,45 @@
                         </ng-container>
 
                         <!-- Weight Column -->
-                        <ng-container matColumnDef="weight">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Weight </mat-header-cell>
-                          <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
+                        <ng-container matColumnDef="calls">
+                          <mat-header-cell *matHeaderCellDef> Calls </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.calls}} </mat-cell>
                         </ng-container>
 
                         <!-- Symbol Column -->
-                        <ng-container matColumnDef="symbol">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </mat-header-cell>
-                          <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+                        <ng-container matColumnDef="channels">
+                          <mat-header-cell *matHeaderCellDef> Channels </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.channels}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="dpm">
+                          <mat-header-cell *matHeaderCellDef> Dial/Min </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.dpm}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="rbt">
+                          <mat-header-cell *matHeaderCellDef> Ring-Time </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.rbt}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="ast">
+                          <mat-header-cell *matHeaderCellDef> Answer-Time </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.ast}} </mat-cell>
+                        </ng-container>
+
+			<!-- Name Column -->
+                        <ng-container matColumnDef="status">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
                         </ng-container>
 
 			<ng-container matColumnDef="actions">
     			  <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
     			  <mat-cell *matCellDef="let row">
-         		    <button mat-raised-button color="primary">Edit</button> 
+         		    <button mat-raised-button color="primary" (click)="EditDetail()">Edit</button> 
     			  </mat-cell>
 			</ng-container> 
 
